tests/paczka1/small_fuzzy/97119060.err
Error in line 3: vdWJ A123 32,4
Error in line 9: GRCB S655 62,7
